--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "nodejs",
+  "name": "chitchatcode",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "@types/node": "^22.13.11"
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "express-session": "^1.18.2",
+    "lenis": "^1.3.8",
+    "mongoose": "^8.17.2",
+    "nodemon": "^3.1.10",
+    "socket.io": "^4.8.1"
   }
 }
